--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div class="description">
 			<h2 class="grey" id="app-description">The TimeFor App</h2>
-			<p class="grey">With a few quick taps, your business is up and running - consumers are able to find you, view openings in your schedule, request appointments and refer you to their friends.  Instead of wasting time becoming a website expert and SEO/SEM guru, TimeFor brings business directly to you.  It is simple and efficient, giving you TimeFor the important things in your life.</p>
+			<p class="grey unbold">With a few quick taps, your business is up and running - customers are able to find you, view openings in your schedule, request appointments and refer you to their friends. Instead of wasting time becoming a website expert and SEO/SEM guru, TimeFor brings business directly to you. It's simple and efficient, giving you TimeFor the important things in your life!</p>
 		</div>
 
 		<div id="contact">
@@ -36,42 +36,48 @@
 
 
 	<!-- Begin MailChimp Signup Form -->
-	<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-		/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-	</style>
-	<div id="mc_embed_signup">
-	<form action="//timeforinc.us10.list-manage.com/subscribe/post?u=85e6ea21b81b83e0438cdf724&amp;id=fab6ad9a90" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	    <div id="mc_embed_signup_scroll">
-		<h2>Join Our Beta</h2>
-	<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-	<div class="mc-field-group">
-		<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
-	</label>
-		<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="First Name">
-	</div>
-	<div class="mc-field-group">
-		<label for="mce-LNAME">Last Name </label>
-		<input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="Last Name">
-	</div>
-	<div class="mc-field-group">
-		<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-	</label>
-		<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
-	</div>
-		<div id="mce-responses" class="clear">
-			<div class="response" id="mce-error-response" style="display:none"></div>
-			<div class="response" id="mce-success-response" style="display:none"></div>
-		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-	    <div style="position: absolute; left: -5000px;"><input type="text" name="b_85e6ea21b81b83e0438cdf724_fab6ad9a90" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-	    </div>
-	</form>
-	</div>
-	<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-	<!--End mc_embed_signup-->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//timeforinc.us10.list-manage.com/subscribe/post?u=85e6ea21b81b83e0438cdf724&amp;id=fab6ad9a90" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Join Our Beta</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" placeholder="First Name">
+</div>
+<div class="mc-field-group">
+	<label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME" placeholder="Last Name">
+</div>
+<div class="mc-field-group">
+	<label for="mce-MMERGE3">Service you Provide  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" placeholder="Service you Provide">
+</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_85e6ea21b81b83e0438cdf724_fab6ad9a90" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src = "app.min.js">
